--- a/src/views/create-orphanage.hbs
+++ b/src/views/create-orphanage.hbs
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
-<html lang="pt_BR">
+<html lang="pt-br">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Adicionar Casa de Acolhida | Happy</title>
 
-    <link rel="icon" href="./public/images/logo-icon.png" />
+    <link rel="icon" href="/images/logo-icon.png" />
 
     <link
       href="https://fonts.googleapis.com/css2?family=Nunito:wght@400;600;700;800&display=swap"
@@ -25,24 +25,24 @@
       crossorigin=""
     ></script>
 
-    <link rel="stylesheet" href="./public/css/main.css" />
-    <link rel="stylesheet" href="./public/css/animations.css" />
-    <link rel="stylesheet" href="./public/css/page-create-orphanage.css" />
-    <link rel="stylesheet" href="./public/css/sidebar.css" />
-    <link rel="stylesheet" href="./public/css/mapcontainer.css" />
-    <link rel="stylesheet" href="./public/css/form.css" />
-    <link rel="stylesheet" href="./public/css/buttons.css" />
+    <link rel="stylesheet" href="/css/main.css" />
+    <link rel="stylesheet" href="/css/animations.css" />
+    <link rel="stylesheet" href="/css/page-create-orphanage.css" />
+    <link rel="stylesheet" href="/css/sidebar.css" />
+    <link rel="stylesheet" href="/css/mapcontainer.css" />
+    <link rel="stylesheet" href="/css/form.css" />
+    <link rel="stylesheet" href="/css/buttons.css" />
   </head>
 
   <body>
     <div id="page-create-orphanage">
       <aside class="animate-right">
-        <a href="orphanages.html">
-          <img src="./public/images/map-marker.svg" alt="Happy" />
+        <a href="/orphanages">
+          <img src="/images/map-marker.svg" alt="Happy" />
         </a>
         <footer>
           <button onclick="history.back()">
-            <img src="./public/images/arrow-back.svg" alt="Voltar" />
+            <img src="/images/arrow-back.svg" alt="Voltar" />
           </button>
         </footer>
       </aside>
@@ -92,7 +92,7 @@
                   />
                   <span onclick="deleteField(event)"
                     ><img
-                      src="./public/images/remove-file.svg"
+                      src="/images/remove-file.svg"
                       alt="Remover imagem"
                   /></span>
                 </div>
@@ -100,7 +100,7 @@
 
               <button type="button" onclick="addPhotoField()">
                 <img
-                  src="./public/images/add-new.svg"
+                  src="/images/add-new.svg"
                   alt="Adicionar nova imagem"
                 />
               </button>
@@ -157,6 +157,6 @@
         </form>
       </main>
     </div>
-    <script src="./public/scripts/page-create-orphanage.js"></script>
+    <script src="/scripts/page-create-orphanage.js"></script>
   </body>
 </html>
