--- a/src/views/index.hbs
+++ b/src/views/index.hbs
@@ -1,17 +1,17 @@
 <!DOCTYPE html>
-<html lang="pt_BR">
+<html lang="pt-br">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Happy</title>
-    <link rel="icon" href="./public/images/logo-icon.png" />
+    <link rel="icon" href="/images/logo-icon.png" />
     <link
       href="https://fonts.googleapis.com/css2?family=Nunito:wght@400;600;800&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="./public/css/main.css" />
-    <link rel="stylesheet" href="./public/css/animations.css" />
-    <link rel="stylesheet" href="./public/css/page-landing.css" />
+    <link rel="stylesheet" href="/css/main.css" />
+    <link rel="stylesheet" href="/css/animations.css" />
+    <link rel="stylesheet" href="/css/page-landing.css" />
   </head>
   <body>
     <div id="page-landing">
@@ -19,7 +19,7 @@
         <header>
           <img
             class="animate-up"
-            src="/public/images/logo.svg"
+            src="/images/logo.svg"
             alt="Logomarca da Happy"
           />
           <div class="location animate-up">
@@ -35,10 +35,10 @@
             </p>
             <a
               class="animate-up"
-              href="orphanages.html"
+              href="/orphanages"
               title="Visite casas de acolhida"
             >
-              <img src="./public/images/arrow.svg" alt="Ir para o mapa" />
+              <img src="/images/arrow.svg" alt="Ir para o mapa" />
             </a>
           </section>
         </main>
