--- a/src/views/orphanage.hbs
+++ b/src/views/orphanage.hbs
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
-<html lang="pt_BR">
+<html lang="pt-br">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Abrigo Municipal Pingo de Gente | Happy</title>
 
-    <link rel="icon" href="./public/images/logo-icon.png" />
+    <link rel="icon" href="/images/logo-icon.png" />
 
     <link
       href="https://fonts.googleapis.com/css2?family=Nunito:wght@400;600;700;800&display=swap"
@@ -25,29 +25,29 @@
       crossorigin=""
     ></script>
 
-    <link rel="stylesheet" href="./public/css/main.css" />
-    <link rel="stylesheet" href="./public/css/animations.css" />
-    <link rel="stylesheet" href="./public/css/sidebar.css" />
-    <link rel="stylesheet" href="./public/css/page-orphanage.css" />
-    <link rel="stylesheet" href="./public/css/buttons.css" />
-    <link rel="stylesheet" href="./public/css/mapcontainer.css" />
+    <link rel="stylesheet" href="/css/main.css" />
+    <link rel="stylesheet" href="/css/animations.css" />
+    <link rel="stylesheet" href="/css/sidebar.css" />
+    <link rel="stylesheet" href="/css/page-orphanage.css" />
+    <link rel="stylesheet" href="/css/buttons.css" />
+    <link rel="stylesheet" href="/css/mapcontainer.css" />
   </head>
 
   <body>
     <div id="page-orphanage">
       <aside class="animate-right">
-        <a href="orphanages.html">
-          <img src="./public/images/map-marker.svg" alt="Happy" />
+        <a href="/orphanages">
+          <img src="/images/map-marker.svg" alt="Happy" />
         </a>
         <footer>
           <button onclick="history.back()">
-            <img src="./public/images/arrow-back.svg" alt="Voltar" />
+            <img src="/images/arrow-back.svg" alt="Voltar" />
           </button>
         </footer>
       </aside>
       <main class="animate-appear with-sidebar">
         <div class="orphanage-details">
-          <img src="./public/images/home.jpg" alt="" />
+          <img src="/images/home.jpg" alt="" />
           <div class="images">
             <button onclick="selectImage(event)" class="active" type="button">
               <img
@@ -114,18 +114,18 @@
 
             <div class="open-details">
               <div class="hour">
-                <img src="./public/images/clock.svg" alt="Horários" />
+                <img src="/images/clock.svg" alt="Horários" />
                 Horário de visitas das 08:00 até 17:00
               </div>
               <div class="open-on-weekends">
-                <img src="./public/images/info.svg" alt="Informações" />
+                <img src="/images/info.svg" alt="Informações" />
                 Atendemos nos finais de semana.
               </div>
             </div>
 
             <button class="primary-button" type="button">
               <img
-                src="./public/images/whatsapp.svg"
+                src="/images/whatsapp.svg"
                 alt="Chamar no Whatsapp"
               />
               Entrar em contato
@@ -134,6 +134,6 @@
         </div>
       </main>
     </div>
-    <script src="./public/scripts/page-orphanage.js"></script>
+    <script src="/scripts/page-orphanage.js"></script>
   </body>
 </html>
