--- a/src/views/create-orphanage.hbs
+++ b/src/views/create-orphanage.hbs
@@ -72,7 +72,7 @@
           </div>
 
           <div class="input-block images">
-            <label for="images">Foto</label>
+            <label for="images">Foto <span>(Máximo de 6 fotos permitidas)</span></label>
 
             <div class="images-upload" id="images">
               <div class="new-upload">
